k8s/deployment-be.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuber-be
  namespace: kuber
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kuber-be
  template:
    metadata:
      labels:
        app: kuber-be
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: backend
          image: elfonator/kuber-be
          ports:
            - containerPort: 3000
          volumeMounts:
            - mountPath: /uploads
              name: upload-volume
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
      volumes:
        - name: upload-volume
          persistentVolumeClaim:
            claimName: kuber-pvc
