k8s/deployment-fe.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuber-fe
  namespace: kuber
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kuber-fe
  template:
    metadata:
      labels:
        app: kuber-fe
    spec:
      containers:
        - name: frontend
          image: elfonator/kuber-fe
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 20
