k8s/svc-be.yaml
apiVersion: v1
kind: Service
metadata:
  name: kuber-be-svc
  namespace: kuber
spec:
  type: NodePort
  selector:
    app: kuber-be
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30081
