k8s/svc-fe.yaml
apiVersion: v1
kind: Service
metadata:
  name: kuber-fe-svc
  namespace: kuber
spec:
  type: NodePort
  selector:
    app: kuber-fe
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30380
