k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuber-ingress
  namespace: kuber
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: kuber.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kuber-fe-svc   # Frontend Service
                port:
                  number: 80

          - path: /api(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: kuber-be-svc   # Backend Service
                port:
                  number: 3000
